<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@drawable/ic_round_search_24"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_sort_by"
            android:title="@string/sort_by">
            <menu>
                <item
                    android:id="@+id/menu_priority_low"
                    android:title="@string/priority_low"/>
                <item
                    android:id="@+id/menu_priority_medium"
                    android:title="@string/priority_medium"/>
                <item
                    android:id="@+id/menu_priority_high"
                    android:title="@string/priority_high" />
            </menu>
        </item>
    </group>

    <item
        android:id="@+id/sort_by_name"
        android:title="@string/sort_by_name"/>

    <item
        android:id="@+id/sort_by_date_created"
        android:title="@string/sort_by_date_created"/>

    <item
        android:id="@+id/hide_completed"
        android:title="@string/hide_completed"
        android:checkable="true"
        app:showAsAction="never"/>

    <item
        android:id="@+id/delete_all_completed"
        android:title="@string/delete_all_completed"
        app:showAsAction="never"/>

    <!--<item android:id="@+id/menu_delete_all"
        android:title="@string/delete_all"
        android:icon="@drawable/ic_round_delete_forever_24"
        app:showAsAction="ifRoom"/> -->
</menu>