<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".fragments.add.AddFragment">

        <!--<EditText
            android:id="@+id/title_et"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/title"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" /> -->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_et_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_required"
            app:errorEnabled="true"
            app:helperText="@string/required_asterisk"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:paddingStart="24dp"
                android:paddingEnd="24dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--<Spinner
            android:id="@+id/priority_spinner"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@android:color/transparent"
            android:entries="@array/priorities"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_et_layout" /> -->

        <com.tiper.MaterialSpinner
            android:id="@+id/priority_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/priority_hint"
            app:helperText="Priority (optional)"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_et_layout"
            app:layout_constraintHorizontal_bias="0.5"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>

        <!--<EditText
            android:id="@+id/description_et"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ems="10"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:layout_marginTop="8dp"
            android:hint="@string/description"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="16dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priority_spinner" /> -->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_et_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            app:counterEnabled="true"
            app:helperText="@string/required_asterisk"
            android:hint="@string/description_required"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priority_spinner"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:paddingStart="24dp"
                android:paddingEnd="24dp" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>