<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="args"
            type="com.norbertotaveras.todo.fragments.update.UpdateFragmentArgs"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".fragments.update.UpdateFragment">

        <!--<EditText
            android:id="@+id/current_title_et"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@{args.currentTodo.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" /> -->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/current_title_et_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_required"
            app:errorEnabled="true"
            app:helperText="@string/required_asterisk"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/current_title_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@{args.currentTodo.title}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <!--<Spinner
            android:id="@+id/current_priority_spinner"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_input"
            android:entries="@array/priorities"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:parsePriority="@{args.currentTodo.priority}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_title_et_layout" /> -->

        <com.tiper.MaterialSpinner
            android:id="@+id/current_priority_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/priority_hint"
            android:layout_marginTop="8dp"
            app:helperText="Priority (optional)"
            android:parsePriority="@{args.currentTodo.priority}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/current_title_et_layout"
            app:layout_constraintHorizontal_bias="0.5"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>

        <!--<EditText
            android:id="@+id/current_description_et"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:gravity="top|start"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:paddingStart="24dp"
            android:paddingTop="16dp"
            android:paddingEnd="24dp"
            android:text="@{args.currentTodo.description}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_priority_spinner" /> -->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/current_description_et_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_required"
            android:gravity="top|start"
            android:layout_marginTop="8dp"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            app:counterEnabled="true"
            app:helperText="@string/required_asterisk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/current_priority_spinner"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/current_description_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:paddingStart="24dp"
                android:gravity="top|start"
                android:paddingEnd="24dp"
                android:text="@{args.currentTodo.description}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/date_created"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/current_description_et_layout"
            tools:text="*Date created:" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>